src/App.css
body {
  margin: 0 auto;
  position: relative;
  font-family: 'Work Sans', sans-serif;
}

/* Background */

.background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url('/tree-upd2.jpg');
  background-size: cover;
  background-position: center;
  z-index: -1;
}

/* Sections */

.section {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.section-light {
  background-color: #fffcfc99;
}

.section-dark {
  /* here so there is something here */
  align-items: center;
}

/* Header */

.header {
  /* border: 1px green solid; */
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

#canvas {
  /* border: 1px red solid; */
  position: absolute;
  width: 100vw;
  height: 100vh;
}

.logo h1 {
  /* border: 1px blue solid; */
  font-family: 'Work Sans', sans-serif;
  font-weight: 100;
  font-size: 8em;
  margin: 0;
  line-height: 0.9;
  text-align: center;
}

.logo-clip-4000 {
  background: linear-gradient(
    to right,
    #785f50 0%,
    #fff5f5 50%,
    #785f50 90%
  );

  -webkit-background-clip: text;
  color: transparent;
  background-position: -40vw;
  animation: shineText 4000ms infinite;
}

@keyframes shineText {
  to {
    background-position: 140vw;
  }
}

span {
  display: inline-block;
  width: 0.8em;
  text-align: center;
}

@media (max-width: 768px) {
  .logo h1 {
    font-size: 5em;
  }
}

@media (max-width: 480px) {
  .logo h1 {
    font-size: 4em;
  }
}

/* Shared */

.info {
  /* border: 1px blue solid; */
  display: flex;
  flex-direction: column;
  text-align: center;
  max-width: 800px;
  padding-top: 2em;
  margin-left: 1em;
  margin-right: 1em;
}

/* About */

.about-container{
  /* border: 1px red solid; */
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 96vw;
}

.about-img-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

@media (max-width: 768px) {
  .about-container {
    flex-wrap: wrap;
    height: 200vh;
  }
  .about-img-container {
    width: 100vw;
  }
}

.about-img {
  height: 100vh;
}

/* Media */

#media {
  /* scale with contents: */
  height: auto;
}

.video-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.vertical-video {
  height: 96vh;
  width: 53vh;
  margin-bottom: 5vh;
  /* top | right | bottom | left */
  margin: 0 2.5vh 5vh 2.5vh;
}

.horizontal-video {
  height: 45vh;
  width: 600px;
  margin: 0 2.5vh 5vh 2.5vh;
}

@media (max-width: 568px) {
  .horizontal-video {
    max-height: 50vh;
    width: 90vw;
  }
  .vertical-video {
    height: 80vh;
    width: 90vw;
  }
}

.image-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
  margin-bottom: 10vh;
}

.image-container img {
  width: 33vw;
}

.caption-container {
  position: relative;
  display: inline-block;
}

.caption {
  position: absolute;
  top: 90%;
  right: 5%;
  background-color: #140200;
  font-family: 'Work Sans', sans-serif;
  font-weight: 400;
  font-size: 0.8em;
  padding: 4px;
}

@media (max-width: 1500px) {
  .image-container {
  grid-template-columns: repeat(2, 1fr);
  }
  .image-container img {
    width: 40vw;
  }
  .odd-img {
    display: none;
  }
}

@media (max-width: 768px) {
  .image-container {
    grid-template-columns:  1fr;
  }
  .image-container img {
    width: 90vw;
  }
  .odd-img {
    display: block;
  }
}

/* Live */

.live-container {
  padding: 5em;
  text-align: center;
  vertical-align: middle;
}

/* Contact */

.ia-outer{
  position: relative;
  display: inline-block;
}
.a1{
  position: absolute;
  top: 30%;
  right: 0%;
}
.a2{
  position: absolute;
  top: 40%;
  right: 0%;
}
.a3{
  position: absolute;
  top: 50%;
  right: 0%;
}
.a3l{
  position: absolute;
  top: 50%;
  right: -10%;
}
.a3r{
  position: absolute;
  top: 50%;
  right: 10%;
}
.a4l{
  position: absolute;
  top: 60%;
  right: 15%;
}
.a4{
  position: absolute;
  top: 60%;
  right: 0%;
}
.a4r{
  position: absolute;
  top: 60%;
  right: -15%;
}

.logo-clip-40000 h1 {
  /* color:  #fff5f548; */
  background: linear-gradient(
    to right,
    #785f5050 0%,
    #fff5f550 50%,
    #785f5050 90%
  );

  -webkit-background-clip: text;
  color: transparent;
  background-position: -40vw;
  animation: shineText 40000ms infinite;
}

/* Typography */

.section-header {
  font-family: 'Work Sans', sans-serif;
  font-weight: 400;
  font-size: 2rem;
  text-transform: uppercase;
  letter-spacing: 0.2em;
}

.dates-header {
  font-family: 'Work Sans', sans-serif;
  font-weight: 400;
  font-size: 1.2rem;
  text-transform: uppercase;
  letter-spacing: 0.2em;
}

.body-text {
  font-family: 'Work Sans', sans-serif;
  font-weight: 300;
  font-size: 1.2em;
}

.animation-attr {
  font-family: 'Work Sans', sans-serif;
  font-weight: 300;
  font-size: 0.9em;
  color: #c08b7b;
  text-align: center;
  position: absolute;
  bottom: 0;
  padding: 0 10px;
}

.text-light {
  color: #feeaea;
}

.text-mid-light {
  color: #c09d92;
}

.text-mid-dark {
  color: #4d1313;
}

.text-dark {
  color: #260F09;
}

a {
  color: #feeaea;
}

a:hover {
  color: #c08b7b;
}

/* Layout utilities */

.padding-bottom-10vh {
  padding-bottom: 10vh;
}

.margin-top-20vh {
  margin-top: 20vh;
}

.margin-top-10vh {
  margin-top: 10vh;
}

/* todo links */

